# trepl

./: CMakeLists.txt
include/: ast.h  list.h  ok_lib.h  stack.h  tlang.h  token.h  type.h  util.h  value.h
src/: main.c  parser.y  scanner.l  stack.c  tlang.c  type.c  value.c
src/ast/: assignment.c  call.c  double.c  func.c  int.c  return.c  type_def.c  var.c
